syntax = "proto3";
package hello;
import "person.proto";
// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  // default format
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  // default format
  person.Person person = 1;
}
